--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,17 @@
 [project]
-name = "project-name"  # Replace with your project name
+name = "ura-lightning-detection"
 version = "0.1.0"
-description = "Project description"  # Replace with your project description
-authors = [
-    {name = "Your Name", email = "your.email@example.com"}  # Replace with your details
-]
-license = {text = "MIT"}
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10, <3.13"
+requires-python = ">=3.13"
 dependencies = [
+    "arrow>=1.3.0",
+    "folium>=0.20.0",
+    "geopy>=2.4.1",
+    "matplotlib>=3.10.6",
+    "pandas>=2.3.2",
+    "requests>=2.32.5",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
