--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "arrow>=1.3.0",
+    "fastapi>=0.116.1",
     "folium>=0.20.0",
     "geopy>=2.4.1",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
     "requests>=2.32.5",
     "seaborn>=0.13.2",
+    "uvicorn>=0.35.0",
 ]
 
 [project.optional-dependencies]
